force-app/main/default/objects/FreeWithdrawConfig__c/FreeWithdrawConfig__c.object-meta.xml
<CustomObject>
    <label>Configurazione Ritiri Gratuiti</label>
    <nameField>
        <label>Nome Configurazione Ritiri Gratuiti</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configurazion Ritiri Gratuiti</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>