force-app/main/default/objects/FreeWithdrawConfig__c/fields/FreeWithdrawCalculation__c.field-meta.xml
<CustomField>
    <fullName>FreeWithdrawCalculation__c</fullName>
    <label>Calcolo Ritiro Gratuito</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_YN</valueSetName>
    </valueSet>
</CustomField>