force-app/main/default/objects/FreeWithdrawConfig__c/fields/ToBePaidWithinMonthsDomestic__c.field-meta.xml
<CustomField>
    <fullName>ToBePaidWithinMonthsDomestic__c</fullName>
    <label>A Pagamento Entro Mesi Domestico</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>