force-app/main/default/objects/FreeWithdrawConfig__c/fields/ToBePaidWithinMonthsNotDomestic__c.field-meta.xml
<CustomField>
    <fullName>ToBePaidWithinMonthsNotDomestic__c</fullName>
    <label>A Pagamento Entro Mesi Non Domestico</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>