force-app/main/default/objects/FreeWithdrawConfig__c/fields/ToPayIfVolumeEqualOrHigherDom__c.field-meta.xml
<CustomField>
    <fullName>ToPayIfVolumeEqualOrHigherDom__c</fullName>
    <label>Limite Volume Domestico</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>